--- a/app/views/admin/bootstrap_elements.html.erb
+++ b/app/views/admin/bootstrap_elements.html.erb
@@ -47,6 +47,11 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
+            	
+            	<li >
+            		
+            		<a href="/">Siteye Geri Dön</a>
+            	</li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
                     <ul class="dropdown-menu message-dropdown">
@@ -123,25 +128,25 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">View All</a>
+                            <a href="#">Tümünü Gör</a>
                         </li>
                     </ul>
                 </li>
-                <li class="dropdown">
+                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Onur Demirtaş <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Profil</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Mesajlarım</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#"><i class="fa fa-fw fa-gear"></i> Ayarlar</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Çıkış Yap</a>
                         </li>
                     </ul>
                 </li>
@@ -158,13 +163,25 @@
                     <li>
                         <a href="/administrator/tables"><i class="fa fa-fw fa-table"></i> Tablolar</a>
                     </li>
+                    
+                     <li>
+                        <a href="/administrator/ilanlar"><span class="glyphicon glyphicon-list-alt"></span> İlanlar</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/uyeler"><span class="glyphicon glyphicon-user"></span> Üyeler</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/yorumlar"><span class="glyphicon glyphicon-comment"></span> Yorumlar</a>
+                    </li>
                     <li>
                         <a href="/administrator/forms"><i class="fa fa-fw fa-edit"></i> Formlar</a>
                     </li>
                     <li>
                         <a href="/administrator/bootstrapelements"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
                     </li>
-                    
+                   
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
@@ -176,9 +193,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="/administrator/blankpage"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
+                    
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -189,6 +205,9 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
+                
+                <br class="visible-xs">
+                
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
