--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -50,6 +50,11 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
+            	
+            	<li >
+            		
+            		<a href="/">Siteye Geri Dön</a>
+            	</li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
                     <ul class="dropdown-menu message-dropdown">
@@ -126,25 +131,25 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">View All</a>
+                            <a href="#">Tümünü Gör</a>
                         </li>
                     </ul>
                 </li>
-                <li class="dropdown">
+                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Onur Demirtaş <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Profil</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Mesajlarım</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#"><i class="fa fa-fw fa-gear"></i> Ayarlar</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Çıkış Yap</a>
                         </li>
                     </ul>
                 </li>
@@ -160,6 +165,18 @@
                     </li>
                     <li>
                         <a href="/administrator/tables"><i class="fa fa-fw fa-table"></i> Tablolar</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/ilanlar"><span class="glyphicon glyphicon-list-alt"></span> İlanlar</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/uyeler"><span class="glyphicon glyphicon-user"></span> Üyeler</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/yorumlar"><span class="glyphicon glyphicon-comment"></span> Yorumlar</a>
                     </li>
                     <li>
                         <a href="/administrator/forms"><i class="fa fa-fw fa-edit"></i> Formlar</a>
@@ -179,9 +196,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="/administrator/blankpage"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
+                    
                     
                 </ul>
             </div>
@@ -193,6 +208,10 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
+                
+                <br class="visible-xs">
+                
+                
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
@@ -211,7 +230,7 @@
                     <div class="col-lg-12">
                         <div class="alert alert-info alert-dismissable">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                            <i class="fa fa-info-circle"></i>  <strong>Like Campus İlan?</strong> Try out <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">Campus İlan 2</a> for additional features!
+                            <i class="fa fa-info-circle"></i>  <strong>Campus İlan Admin Paneline Hoş Geldiniz</strong> 
                         </div>
                     </div>
                 </div>
@@ -309,18 +328,7 @@
                 </div>
                 <!-- /.row -->
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> İstatistikler</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-area-chart"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                
                 <!-- /.row -->
 
                 <div class="row">
@@ -459,6 +467,19 @@
                     </div>
                 </div>
                 <!-- /.row -->
+                
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> İstatistikler</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div id="morris-area-chart"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             </div>
             <!-- /.container-fluid -->
