--- a/app/views/admin/uyeler.html.erb
+++ b/app/views/admin/uyeler.html.erb
@@ -47,6 +47,11 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
+            	
+            	<li >
+            		
+            		<a href="/">Siteye Geri Dön</a>
+            	</li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
                     <ul class="dropdown-menu message-dropdown">
@@ -126,7 +131,7 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#">View All</a>
+                            <a href="#">Tümünü Gör</a>
                         </li>
                     </ul>
                 </li>
@@ -134,17 +139,17 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Onur Demirtaş <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="#"><i class="fa fa-fw fa-user"></i> Profil</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
+                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Mesajlarım</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="#"><i class="fa fa-fw fa-gear"></i> Ayarlar</a>
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Çıkış Yap</a>
                         </li>
                     </ul>
                 </li>
@@ -161,13 +166,25 @@
                     <li>
                         <a href="/administrator/tables"><i class="fa fa-fw fa-table"></i> Tablolar</a>
                     </li>
+                    
+                     <li>
+                        <a href="/administrator/ilanlar"><span class="glyphicon glyphicon-list-alt"></span> İlanlar</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/uyeler"><span class="glyphicon glyphicon-user"></span> Üyeler</a>
+                    </li>
+                    
+                     <li>
+                        <a href="/administrator/yorumlar"><span class="glyphicon glyphicon-comment"></span> Yorumlar</a>
+                    </li>
                     <li>
                         <a href="/administrator/forms"><i class="fa fa-fw fa-edit"></i> Formlar</a>
                     </li>
                     <li>
                         <a href="/administrator/bootstrapelements"><i class="fa fa-fw fa-desktop"></i> Bootstrap Elements</a>
                     </li>
-                    
+                   
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
@@ -179,9 +196,8 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="/administrator/blankpage"><i class="fa fa-fw fa-file"></i> Blank Page</a>
-                    </li>
+                    
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -192,23 +208,97 @@
             <div class="container-fluid">
 
                 <!-- Page Heading -->
+                
+                <br class="visible-xs">
+                
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Blank Page
-                            <small>Subheading</small>
+                            Üye Sayfası
+                            
                         </h1>
                         <ol class="breadcrumb">
                             <li>
                                 <i class="fa fa-dashboard"></i>  <a href="index.html">Yönetim Paneli</a>
                             </li>
                             <li class="active">
-                                <i class="fa fa-file"></i> Blank Page
+                                <i class="fa fa-file"></i> Üye Sayfası
                             </li>
                         </ol>
                     </div>
                 </div>
                 <!-- /.row -->
+                
+                <form role = "form">
+						
+
+						<div class = "col-lg-4 input-group">
+							<input placeholder="Üye Ara..."type = "text" class = "form-control">
+
+							<span class = "input-group-btn">
+								<button class = "btn btn-default" type = "button">
+									Ara
+								</button> </span>
+
+						</div>
+						
+						
+
+					</form>
+					
+					<br>
+                
+                
+                <div class="table-responsive">
+                            <table class="table table-bordered table-hover table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Üye Adı</th>
+                                        <th>Kullanıcı Adı</th>
+                                        <th>Üniversite</th>
+                                        <th>E-posta</th>
+                                        <th>Düzenle</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                	
+                                	<% @sonuyeler.each do |user| %>
+                                		<tr>
+	                                        <td><%= user.name %> <%= user.surname %></td>
+	                                        <td><%= user.username %></td>
+	                                        <td><%= user.university.name %></td>
+	                                        <td><%= user.email %></td>
+	                                        <td style="text-align:center;"><a href=""><span class = "glyphicon glyphicon-pencil"></span></a></td>
+	                                    </tr>
+                                	<% end %>
+                                   
+                                </tbody>
+                            </table>
+                        </div>
+                        
+                        <ul class = "pagination">
+							<li>
+								<a href = "#">&laquo;</a>
+							</li>
+							<li class = "active">
+								<a href = "#">1</a>
+							</li>
+							<li class = "disabled">
+								<a href = "#">2</a>
+							</li>
+							<li>
+								<a href = "#">3</a>
+							</li>
+							<li>
+								<a href = "#">4</a>
+							</li>
+							<li>
+								<a href = "#">5</a>
+							</li>
+							<li>
+								<a href = "#">&raquo;</a>
+							</li>
+						</ul>
 
             </div>
             <!-- /.container-fluid -->
