--- a/app/views/admin/yorumlar.html.erb
+++ b/app/views/admin/yorumlar.html.erb
@@ -17,9 +17,6 @@
     <!-- Custom CSS -->
     <link href="/resources/plugins/adminpanel/css/sb-admin.css" rel="stylesheet">
 
-    <!-- Morris Çizelgeler CSS -->
-    <link href="/resources/plugins/adminpanel/css/plugins/morris.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="/resources/plugins/adminpanel/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -65,7 +62,8 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>Onur Demirtaş</strong>
+                                        <h5 class="media-heading">
+                                            <strong>Onur Demirtaş</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -80,7 +78,8 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>Onur Demirtaş</strong>
+                                        <h5 class="media-heading">
+                                            <strong>Onur Demirtaş</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -95,7 +94,8 @@
                                         <img class="media-object" src="http://placehold.it/50x50" alt="">
                                     </span>
                                     <div class="media-body">
-                                        <h5 class="media-heading"><strong>Onur Demirtaş</strong>
+                                        <h5 class="media-heading">
+                                            <strong>Onur Demirtaş</strong>
                                         </h5>
                                         <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
@@ -135,7 +135,7 @@
                         </li>
                     </ul>
                 </li>
-                 <li class="dropdown">
+                <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Onur Demirtaş <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
@@ -215,178 +215,93 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Çizelgeler
+                            Yorum Sayfası
+                            
                         </h1>
                         <ol class="breadcrumb">
                             <li>
                                 <i class="fa fa-dashboard"></i>  <a href="index.html">Yönetim Paneli</a>
                             </li>
                             <li class="active">
-                                <i class="fa fa-bar-chart-o"></i> Çizelgeler
+                                <i class="fa fa-file"></i> Yorum Sayfası
                             </li>
                         </ol>
                     </div>
                 </div>
                 <!-- /.row -->
+                
+                <form role = "form">
+						
 
-                <!-- Flot Çizelgeler -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2 class="page-header">Flot Çizelgeler</h2>
-                        <p class="lead">Flot is a pure JavaScript plotting library for jQuery, with a focus on simple usage, attractive looks and interactive features. For full usage instructions and documentation for Flot Çizelgeler, visit <a href="http://www.flotÇizelgeler.org/">http://www.flotÇizelgeler.org/</a>.</p>
-                    </div>
-                </div>
-                <!-- /.row -->
+						<div class = "col-lg-4 input-group">
+							<input placeholder="Yorum Ara..."type = "text" class = "form-control">
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Line Graph Example with Tooltips</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="flot-chart">
-                                    <div class="flot-chart-content" id="flot-line-chart"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
+							<span class = "input-group-btn">
+								<button class = "btn btn-default" type = "button">
+									Ara
+								</button> </span>
 
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="panel panel-green">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Pie Chart Example with Tooltips</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="flot-chart">
-                                    <div class="flot-chart-content" id="flot-pie-chart"></div>
-                                </div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-8">
-                        <div class="panel panel-yellow">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Multiple Axes Line Graph Example with Tooltips and Raw Data</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="flot-chart">
-                                    <div class="flot-chart-content" id="flot-multiple-axes-chart"></div>
-                                </div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
+						</div>
+						
+						
 
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="panel panel-red">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Moving Line Chart</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="flot-chart">
-                                    <div class="flot-chart-content" id="flot-moving-line-chart"></div>
-                                </div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Bar Graph with Tooltips</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div class="flot-chart">
-                                    <div class="flot-chart-content" id="flot-bar-chart"></div>
-                                </div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
+					</form>
+					
+					<br>
+                
+                
+                <div class="table-responsive">
+						<table class="table table-bordered table-hover">
+							<thead>
+								<tr>
+									<th>İlan Adı</th>
+									<th>Tıklanma</th>
+									<th>Popülerlik</th>
+									<th>Fiyat</th>
+									<th>Düzenle</th>
+								</tr>
+							</thead>
+							<tbody>
 
-                <!-- Morris Çizelgeler -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2 class="page-header">Morris Çizelgeler</h2>
-                        <p class="lead">Morris.js is a very simple API for drawing line, bar, area and donut Çizelgeler. For full usage instructions and documentation for Morris.js Çizelgeler, visit <a href="http://morrisjs.github.io/morris.js/">http://morrisjs.github.io/morris.js/</a>.</p>
-                    </div>
-                </div>
-                <!-- /.row -->
+								
+								<tr>
+									<td>asd</td>
+									<td>asd</td>
+									<td>asd</td>
+									<td>asd</td>
+									<td style="text-align:center;"><a href=""><span class = "glyphicon glyphicon-pencil"></span></a></td>
+								</tr>
+								
 
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="panel panel-green">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Area Line Graph Example with Tooltips</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-area-chart"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
+							</tbody>
+						</table>
+						
 
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="panel panel-yellow">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Donut Chart Example</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-donut-chart"></div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="panel panel-red">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Line Graph Example with Tooltips</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-line-chart"></div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-long-arrow-right"></i> Bar Graph Example</h3>
-                            </div>
-                            <div class="panel-body">
-                                <div id="morris-bar-chart"></div>
-                                <div class="text-right">
-                                    <a href="#">View Details <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- /.row -->
+					</div>
+					
+					<ul class = "pagination">
+							<li>
+								<a href = "#">&laquo;</a>
+							</li>
+							<li class = "active">
+								<a href = "#">1</a>
+							</li>
+							<li class = "disabled">
+								<a href = "#">2</a>
+							</li>
+							<li>
+								<a href = "#">3</a>
+							</li>
+							<li>
+								<a href = "#">4</a>
+							</li>
+							<li>
+								<a href = "#">5</a>
+							</li>
+							<li>
+								<a href = "#">&raquo;</a>
+							</li>
+						</ul>
 
             </div>
             <!-- /.container-fluid -->
@@ -402,19 +317,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/resources/plugins/adminpanel/js/bootstrap.min.js"></script>
-
-    <!-- Morris Çizelgeler JavaScript -->
-    <script src="/resources/plugins/adminpanel/js/plugins/morris/raphael.min.js"></script>
-    <script src="/resources/plugins/adminpanel/js/plugins/morris/morris.min.js"></script>
-    <script src="/resources/plugins/adminpanel/js/plugins/morris/morris-data.js"></script>
-
-    <!-- Flot Çizelgeler JavaScript -->
-    <!--[if lte IE 8]><script src="js/excanvas.min.js"></script><![endif]-->
-    <script src="/resources/plugins/adminpanel/js/plugins/flot/jquery.flot.js"></script>
-    <script src="/resources/plugins/adminpanel/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
-    <script src="/resources/plugins/adminpanel/js/plugins/flot/jquery.flot.resize.js"></script>
-    <script src="/resources/plugins/adminpanel/js/plugins/flot/jquery.flot.pie.js"></script>
-    <script src="/resources/plugins/adminpanel/js/plugins/flot/flot-data.js"></script>
 
 </body>
 
