--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -524,18 +524,12 @@
 							</div>
 
 							<div class="panel-body">
-								Duyurular buraya gelecek
-								<br>
-								....
-								<br>
-								....
-								<br>
-								....
-								<br>
-								....
-								<br>
-								....
-								<br>
+								-Campus İlan'a Hoşgeldiniz!!
+								<br><br>
+								-Yardıma mı mı ihtiyacınız var? O zaman <a href="/yardim">buraya</a> tıklayın.
+								<br><br>
+								-Görüş ve Önerileriniz bizim için çok önemli!! <a href="/iletisim">İletişim</a> sayfasından bizimle iletişime geçebilirsiniz.
+								
 							</div>
 
 						</div>
