--- a/public/resources/assets/header-fixed.css
+++ b/public/resources/assets/header-fixed.css
@@ -7,6 +7,7 @@
 	box-sizing: border-box;
 	top:-100px;
     border: 1px solid black;
+    z-index: 30;
 
 	-webkit-transition:top 0.3s;
 	transition:top 0.3s;
