--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -336,7 +336,7 @@
 
 												<a href="/ilanver" class="col-lg-5 btn btn-primary">İlan Ver</a>
 												<a href="#" style="margin-left: 20px;"
-												class="col-lg-5 btn btn-primary">Önceki İlanlarım</a>
+												class="col-lg-5 btn btn-primary">İlanlarım</a>
 											</div>
 										</div>
 									</div>
