--- a/app/views/user/member.html.erb
+++ b/app/views/user/member.html.erb
@@ -214,7 +214,12 @@
 		
 													<div class="thumbnail">
 														<a title='<%= advert.name %>' href="/ikinciel/<%= advert.name.parameterize + '-' + advert.id.to_s %>">  
-															<%= image_tag advert.images[0].imagefile(:small) %> </a>
+															<% if advert.images == [] %>
+																<%= image_tag Image.new.imagefile %> 
+															<% else %>
+																<%= image_tag advert.images[0].imagefile(:small) %> 
+															<% end %>
+														</a>
 		
 													</div>
 		
