--- a/app/views/index/satis_alis.html.erb
+++ b/app/views/index/satis_alis.html.erb
@@ -673,7 +673,9 @@
 									<div class="col-lg-2 col-md-3 col-sm-4 col-xs-4">
 
 										<div class="thumbnail">
-											<a href="#"> <img src="resources/images/cat-demo.jpg"
+											<a href="#"> <img src="resources/
+
+s/cat-demo.jpg"
 											alt="cat demo photo"> </img> </a>
 
 										</div>
